--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "react-homework-template",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://demian-pashkovskyi.github.io/goit-react-hw-08-phonebook/",
+  "homepage": "https://github.com/Demian-Pashkovskyi/goit-react-hw-08-phonebook",
 	"dependencies": {
-    "@emotion/react": "^11.10.4",
+		"@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.6",
